# Council1901

./: .gitignore  README.md
.github/: agents.md
.github/workflows/: playwright.yml
backend/: .dev.vars.example  Cargo.toml  package-lock.json  package.json  wrangler.toml
backend/src/: lib.rs
frontend/: astro.config.mjs  package-lock.json  package.json  playwright.config.ts
frontend/src/pages/: index.astro
frontend/tests/: e2e.spec.ts
